--- a/dec.css
+++ b/dec.css
@@ -196,7 +196,7 @@ tr th,tr:nth-child(odd){
 }
 .country{
     width: 100%;
-    margin:auto auto auto 30px;
+    margin-bottom:30px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap:30px;
